test/lambda/negative/syntax/missing_paren.ls
// @expect-error: E102
// @description: Missing closing parenthesis

let x = (1 + 2
let y = 3
